[tool.poetry]
name = 'zae-engine'
version = '0.0.1'
description = 'Deep learning engine powered by zae-park.'
authors = ["zae-park <tom941105@gmail.com>"]
packages = [
    {include = "zae_engine"},
]

[tool.poetry.dependencies]
python = "~3.10.0"
matplotlib = "^3.7.2"
tensorflow-io-gcs-filesystem = "0.31.0"
segment-anything = "^1.0"
pandas = "^2.0.3"
termcolor = "2.2.0"
keras-ocr = "0.8.9"
simple-lama-inpainting = "^0.1.2"
opencv-python-headless = "^4.8.0.76"
ultralytics = "8.0.155"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
tensorflow = "^2.13.0"
tqdm = "^4.65.0"
einops = "^0.6.1"
future = "^0.18.3"
psutil = "^5.9.5"
requests = "^2.31.0"
rich = "^13.5.2"
typeguard = "^4.1.2"
image-ocr = "^0.0.4"
tensorflow-intel = { version = "^2.14.0", platform = "win64" }
#python-dotenv
#wandb
neptune = "^1.8.2"
wfdb = "^4.1.2"
scikit-learn = "^1.3.1"
neurokit2 = "^0.2.6"
nibabel = "^5.1.0"
minio = "^7.1.17"
pytest = "^7.4.2"


[tool.poetry.group.dev.dependencies]
python = "^3.10"
pytest = "^7.4.2"
torchvision = [
    { platform = "win64", url = "https://download.pytorch.org/whl/cu117/torchvision-0.15.1%2Bcu117-cp310-cp310-win_amd64.whl" },
    { platform = "linux", url = "https://download.pytorch.org/whl/cu117/torchvision-0.15.1%2Bcu117-cp310-cp310-linux_x86_64.whl" },
]
torch = [
    { platform = "win64", url = "https://download.pytorch.org/whl/cu117/torch-2.0.0%2Bcu117-cp310-cp310-win_amd64.whl" },
    { platform = "linux", url = "https://download.pytorch.org/whl/cu117/torch-2.0.0%2Bcu117-cp310-cp310-linux_x86_64.whl" },
]

[build-system]
requires = ["poetry>=1.5"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']