[tool.poetry]
name = 'zae-engine'
version = '0.1.4'
description = 'Deep learning engine powered by zae-park.'
authors = ["zae-park <tom941105@gmail.com>"]
packages = [
    {include = "zae_engine", from='.'},
    {include = "zae_cli", from='.'},
]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
matplotlib = "^3.7.2"
tensorflow-io-gcs-filesystem = "0.31.0"
segment-anything = "^1.0"
termcolor = "2.2.0"
keras-ocr = "0.8.9"
opencv-python-headless = "^4.8.0.76"
ultralytics = "8.0.155"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
tensorflow = "^2.13.0"
tqdm = "^4.65.0"
einops = "^0.6.1"
future = "^0.18.3"
psutil = "^5.9.5"
requests = "^2.31.0"
rich = "^13.5.2"
typeguard = "^4.1.2"
image-ocr = "^0.0.4"
tensorflow-intel = { version = "^2.14.0", platform = "win64" }
#python-dotenv
neptune = "^1.8.2"
wfdb = "^4.1.2"
scikit-learn = "^1.3.1"
neurokit2 = "^0.2.6"
nibabel = "^5.1.0"
minio = "^7.1.17"
pytest = "^7.4.2"
pandas = "^2.1.2"
openpyxl = "^3.1.2"
#tf2onnx = { git = "https://github.com/onnx/tensorflow-onnx.git" }
#onnx = "1.14.1"
click = "^8.1.7"
pillow = "^10.1.0"
wandb = "^0.16.2"
genbadge = "^1.1.1"
pytest-cov = "^5.0.0"
codecov = "^2.1.13"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"


[tool.poetry.group.dev.dependencies]
python = ">=3.10.0,<3.12"
pytest = "^7.4.2"
torchvision = [
    { platform = "win32", url = "https://download.pytorch.org/whl/cu117/torchvision-0.15.1%2Bcu117-cp310-cp310-win_amd64.whl" },
    { platform = "linux", url = "https://download.pytorch.org/whl/cu117/torchvision-0.15.1%2Bcu117-cp310-cp310-linux_x86_64.whl" },
]
torch = [
    { platform = "win32", url = "https://download.pytorch.org/whl/cu117/torch-2.0.0%2Bcu117-cp310-cp310-win_amd64.whl" },
    { platform = "linux", url = "https://download.pytorch.org/whl/cu117/torch-2.0.0%2Bcu117-cp310-cp310-linux_x86_64.whl" },
]
coverage = "^7.4.4"

[build-system]
requires = ["poetry>=1.5"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.poetry.scripts]
zae = "zae_cli.cli:cli_run"
zae-test = "zae_cli.cli:zae_print"

[tool.pydoc-markdown]

