[tool.poetry]
name = 'zae-engine'
version = '0.7.3'
description = 'Deep learning engine powered by zae-park.'
authors = ["zae-park <tom941105@gmail.com>"]
packages = [
    {include = "zae_engine", from='.'},
    {include = "zae_cli", from='.'},
]


[tool.poetry.dependencies]
#zae-engine = [
#    {version = "<0.1.4", python = ">=3.10.0,<3.12"},
#    {version = "^0.1.4", python = ">=3.10.0"}
#]
python = "^3.10"

pandas = "^2.1.2"

# For data IO
wfdb = "^4.1.2"
nibabel = "^5.1.0"

# For Log
tqdm = "^4.65.0"
rich = "^13.5.2"

# For cli
click = "^8.1.7"
psutil = "^5.9.5"
pillow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
safetensors = "^0.4.3"
jupyter = "^1.0.0"
minio = "^7.1.17"

# neurokit2 = "^0.2.6"
# future = "^0.18.3"
# requests = "^2.31.0"
# openpyxl = "^3.1.2"

[tool.poetry.group.test.dependencies]
coverage = "^7.4.4"
pytest = "^7.4.2"
pytest-cov = "^5.0.0"
codecov = "^2.1.13"

[tool.poetry.group.web_log.dependencies]
neptune = "^1.8.2"
wandb = "^0.16.2"
numpy = "~1"

[tool.poetry.group.document.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"

[tool.poetry.group.deep.dependencies]
gensim = "^4.3.3"
fastparquet = "^2024.5.0"
scikit-learn = "^1.3.1"
transformers = "^4.44.1"    # warning message @ low version
torch = [
    { version = "^2.0.0", source = "PyPI", markers = "sys_platform == 'darwin'"},
    { platform = "!= darwin", source = "pytorch", version = "^2.0.0"},
]
torchvision = [
    { version = "^0.15.1", source = "PyPI", markers = "sys_platform == 'darwin'"},
    { platform = "!= darwin", source = "pytorch", version = "^0.15.1"},
]
# tensorflow-io-gcs-filesystem = "0.31.0"
# opencv-python-headless = "^4.8.0.76"
# tensorflow = "^2.13.0"
# tensorflow-intel = { version = "^2.14.0", platform = "win64" }
# keras-ocr = "0.8.9"
# segment-anything = "^1.0"
# image-ocr = "^0.0.4"
# tf2onnx = { git = "https://github.com/onnx/tensorflow-onnx.git" }
# onnx = "1.14.1"
# ultralytics = "8.0.155"     # yolo


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch-vision"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"


[build-system]
requires = ["poetry>=1.5"]
build-backend = "poetry.masonry.api"


[tool.black]
line-length = 120
target-version = ['py310']

[tool.poetry.scripts]
zae = "zae_cli.main:cli"

[tool.pydoc-markdown]

